<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.todolist.MainActivity">

    <item
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/menu"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_info"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:orderInCategory="100"
                android:title="@string/info" />

            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_code_black_24dp"
                android:orderInCategory="100"
                android:title="@string/about" />

        </menu>

    </item>
</menu>
